Fixed general bug where spindle speed control would be visible if spindle was off

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -84,7 +84,7 @@ body.controller.no-critical-errors.estop-disabled #machine-power-manual,
 body.controller.no-critical-errors.estop-disabled.power-on.interp-idle #machine-home-axes,
 body.controller.no-critical-errors.estop-disabled.power-on.homed.file-selected #program-control,
 body.controller.no-critical-errors.estop-disabled.power-on #spindle-control,
-body.controller.no-critical-errors.estop-disabled.power-on.spindle-brake-disengaged #spindle-speed-control,
+body.controller.no-critical-errors.estop-disabled.power-on.spindle-brake-disengaged.spindle-enabled #spindle-speed-control,
 body.controller.no-critical-errors.estop-disabled.power-on #max-velocity-control,
 body.controller.no-critical-errors.estop-disabled.power-on #feed-override-control,
 body.controller.no-critical-errors.estop-disabled.power-on #spindle-override-control,
